# 2023_Light_Manuscript

./: makefile  pyproject.toml
figure/figure2/: figure1.ai
manuscript/: 2022-tomocube-sepsis.bib  figure_legends.md  index.Rmd  keywords.md  manuscript.Rmd  manuscript.docx  manuscript_style.docx
manuscript/_book/: _main.docx  reference-keys.txt
src/: README.md
src/figure2/: draw_distirbution_plot.R  draw_random_sampling_lineplot.R  draw_survival_density_random_sampling_lineplot.R  figure1C_drymass_boxplot.R  figure1C_merge.R  figure1C_nucleus_boxplot.R  figure1C_overall_boxplot.R  figure1C_volume_boxplot.r  get_representative_img.py  raw_image.py  supple_draw_RI_distribution_boxplot_survival.R
src/figure3/: calculate_pvalue_by_shell.py  create_dataframe_for_lineplot_distribution_random_sampling.py  draw_RI_distribution_boxplot.R  draw_RI_distribution_boxplot_survival.R  draw_RI_distribution_line.R  draw_RI_distribution_line_smoothing_version.R  draw_RI_distribution_vlnplot.R  draw_bootstrap_lineplot_shell_RI.R  draw_density_random_sampling_lineplot.R  draw_random_sampling_barplot.R  draw_sampling_lineplot_shell_RI.R  get_slice_voxel_mean_density_background_density.py  get_slice_voxel_mean_density_background_density_for_survival.py  preprocess.R
src/figure4/: draw_ensemble_random_sampling_auroc_with_CI.py  figure3C.R  figure3D.R
src/figure5/: cytokine_correlation.R  extract_ICU_matrix.R  figure4A.R  get_gradcam_img.py  preprocess.R  single_patient_plot.R  test_activation_maximization.py
