[tool.poetry]
name = "2022-tomocube-sepsis-manuscript"
version = "0.1.0"
description = ""
authors = ["MinDong Sung <mdskylover@gmail.com>"]
readme = "README.md"
packages = [{include = "2022_tomocube_sepsis_manuscript"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.1"
pandas = "^1.5.2"
matplotlib = "^3.6.3"
matplotlib-scalebar = "^0.8.1"
opencv-python = "^4.7.0.68"
tifffile = "^2022.10.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.11.4"
ipykernel = "^6.20.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
